--- a/task4.html
+++ b/task4.html
@@ -12,16 +12,18 @@
 <body>
     <div class="wrap">
     <div class="header">
-    <div class="close"><span>关闭</span></div>
-    <div class="login"><span>登陆</span></div>
-    <div class="register"><span>注册</span></div>
+    <span class="close">关闭</span> 
+    <span class="login">登陆</span> 
+    <span class="register">注册</span> 
 </div>
     <div class="phone">
-        <input type="number" name="phone" placeholder="请输入手机号"/>
+        <div class="image"><img src="./img/iphone.png" alt=""></div>
+        <input type="number" name="phone" placeholder="请输入手机号" />
     </div>
 
     <div class="password">
-            <input type="password" name="password" placeholder="请输入密码"/>
+            <div class="image"><img src="./img/locked.png" alt=""></div>
+            <input type="password" name="password" placeholder="请输入密码"/> 
         </div>
        <!-- <div class="login"> -->
         <button type="button">登录</button>
