--- a/task4.html
+++ b/task4.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    
     <div class="header">
     <span class="close">关闭</span> 
     <span class="login">登陆</span> 
@@ -25,11 +25,8 @@
             <div class="image"><img src="./img/locked.png" alt=""></div>
             <input type="password" name="password" placeholder="请输入密码"/> 
         </div>
-       <!-- <div class="login"> -->
-        <button type="button">登录</button>
+        <button type="button">登陆</button>
         <a href="">忘记密码？</a>
-        <!-- </div> -->
-</div>
 </body>
 </html>
 
