--- a/task4.html
+++ b/task4.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height" />
-    <meta name="format-detection" content="telephone=no" />
-    <title>登录页</title>
-    <link rel="stylesheet" href="task4.css">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width,height=device-height" />
+  <meta name="format-detection" content="telephone=no" />
+  <title>登录页</title>
+  <link rel="stylesheet" href="task4.css">
 </head>
 
 <body>
-    
-    <div class="header">
-    <span class="close">关闭</span> 
-    <span class="login">登陆</span> 
-    <span class="register">注册</span> 
-</div>
-    <div class="phone">
-        <div class="image"><img src="./img/iphone.png" alt=""></div>
-        <input type="number" name="phone" placeholder="请输入手机号" />
-    </div>
 
-    <div class="password">
-            <div class="image"><img src="./img/locked.png" alt=""></div>
-            <input type="password" name="password" placeholder="请输入密码"/> 
-        </div>
-        <button type="button">登陆</button>
-        <a href="">忘记密码？</a>
+  <div class="header">
+    <span class="close">关闭</span>
+    <span class="login">登陆</span>
+    <span class="register">注册</span>
+  </div>
+  <div class="phone">
+    <div class="image"><img src="./img/iphone.png" alt=""></div>
+    <input type="tel" name="phone" maxlength="11" minlength="11" placeholder="请输入手机号"  />
+  </div>
+
+  <div class="password">
+    <div class="image"><img src="./img/locked.png" alt=""></div>
+    <input type="password" name="password" placeholder="请输入密码" />
+  </div>
+  <button type="button">登陆</button>
+  <a href="">忘记密码？</a>
 </body>
+
 </html>
-
-
